--- a/module-e-week-1-topic-2-recursion.ipynb
+++ b/module-e-week-1-topic-2-recursion.ipynb
@@ -61,17 +61,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "def sum_list (numbers):\n",
+    "\n",
     "    if len(numbers)==1:\n",
     "        return numbers[0]\n",
+    "    if len(numbers)==0:\n",
+    "        return 0\n",
     "    else :\n",
-    "        return numbers[0]+sum_list(numbers[1:])\n"
+    "        return numbers[0]+sum_list(numbers[1:])\n",
+    "print(sum_list([]))"
    ]
   },
   {
@@ -184,14 +196,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'R', 2: 'Re', 3: 'Rec', 4: 'Recu', 5: 'Recur', 6: 'Recurs', 7: 'Recursi', 8: 'Recursio', 9: 'Recursion'}\n"
+     ]
+    }
+   ],
    "source": [
     "def ladder_word_dict(word):\n",
-    "    # Write your solution here\n"
+    "    if len(word)==1:\n",
+    "        return {1:word}\n",
+    "    else:\n",
+    "        temp_word=word[:-1]\n",
+    "       \n",
+    "        temp={len(word):word}\n",
+    "        return {**(ladder_word_dict(temp_word)),**temp,}\n",
+    "print(ladder_word_dict(\"Recursion\"))"
    ]
   },
   {
@@ -209,15 +236,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mas\n"
+     ]
+    }
+   ],
    "source": [
     "def reverse_string(string):\n",
     "    # Write your solution here\n",
-    "    "
+    "    if len(string)==1:\n",
+    "        return string\n",
+    "    else:\n",
+    "        return reverse_string(string[1:])+string[0]\n"
    ]
   },
   {
@@ -235,14 +273,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "def raise_to_power (base, exp):\n",
-    "    # Write your solution here\n"
+    "    if exp==0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return base*raise_to_power(base,exp-1)\n",
+    "\n",
+    "    # Write your solution here\n",
+    "print(raise_to_power(0,0))"
    ]
   },
   {
@@ -283,7 +335,7 @@
    ],
    "source": [
     "def factorial(n):\n",
-    "    # Write your solution here\n"
+    "\n"
    ]
   },
   {
