--- a/module-e-week-1-topic-2-recursion.ipynb
+++ b/module-e-week-1-topic-2-recursion.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -213,6 +213,8 @@
     "def ladder_word_dict(word):\n",
     "    if len(word)==1:\n",
     "        return {1:word}\n",
+    "    if len(word)==0:\n",
+    "        return {}\n",
     "    else:\n",
     "        temp_word=word[:-1]\n",
     "       \n",
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
@@ -245,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mas\n"
+      "\n"
      ]
     }
    ],
@@ -254,8 +256,11 @@
     "    # Write your solution here\n",
     "    if len(string)==1:\n",
     "        return string\n",
+    "    if len(string)==0:\n",
+    "        return \"\"\n",
     "    else:\n",
-    "        return reverse_string(string[1:])+string[0]\n"
+    "        return reverse_string(string[1:])+string[0]\n",
+    "print(reverse_string(\"\"))"
    ]
   },
   {
@@ -319,23 +324,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (2132706356.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [1]\u001b[0;36m\u001b[0m\n\u001b[0;31m    # Write your solution here\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
      ]
     }
    ],
    "source": [
     "def factorial(n):\n",
-    "\n"
+    "    if n==0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n*factorial(n-1)\n",
+    "\n",
+    "\n",
+    "print(factorial(5))"
    ]
   },
   {
@@ -360,14 +370,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "def sum_digits(n):\n",
-    "    # Write your solution here\n"
+    "    if n<10:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return n%10+sum_digits(n//10)\n",
+    "print(sum_digits(3422))"
    ]
   },
   {
@@ -395,14 +417,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1666666666666667\n"
+     ]
+    }
+   ],
    "source": [
     "def harmonic(n):\n",
-    "    # Write your solution here\n"
+    "    if n<=1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "    \n",
+    "        \n",
+    "        return 1/n+harmonic(1/(n-1))\n",
+    "    # Write your solution here\n",
+    "print(harmonic(6))"
    ]
   },
   {
@@ -456,14 +493,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def nth_fibonacci (n):\n",
-    "    # Write your solution here\n"
+    "    # Write your solution here\n",
+    "    if n==2:\n",
+    "        return 1\n",
+    "    if n==1:\n",
+    "        return 0\n",
+    "    else :\n",
+    "        return nth_fibonacci(n-2)+nth_fibonacci(n-1)\n",
+    "nth_fibonacci(7)"
    ]
   },
   {
