--- a/module-e-week-1-topic-2-recursion.ipynb
+++ b/module-e-week-1-topic-2-recursion.ipynb
@@ -493,20 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6765\n"
+     ]
     }
    ],
    "source": [
@@ -515,10 +512,12 @@
     "    if n==2:\n",
     "        return 1\n",
     "    if n==1:\n",
+    "        return 1\n",
+    "    if n<0:\n",
     "        return 0\n",
     "    else :\n",
     "        return nth_fibonacci(n-2)+nth_fibonacci(n-1)\n",
-    "nth_fibonacci(7)"
+    "print(nth_fibonacci(20))"
    ]
   },
   {
