--- a/module-e-week-1-topic-2-recursion.ipynb
+++ b/module-e-week-1-topic-2-recursion.ipynb
@@ -620,15 +620,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rummurderforajarofredrum\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def is_palindrome(phrase):\n",
-    "    # Write your solution here\n"
+    "    def get_reverse(phrase):\n",
+    "        phrase=phrase.lower().replace(\" \",\"\")\n",
+    "\n",
+    "        if len(phrase)<=0:\n",
+    "            return phrase\n",
+    "        else:\n",
+    "            return get_reverse(phrase[1:])+phrase[0]\n",
+    "    x=get_reverse(phrase)\n",
+    "    print(x)\n",
+    "  \n",
+    "    if x==phrase.replace(\" \", \"\").lower():\n",
+    "        return True\n",
+    "    return False\n",
+    "    # Write your solution here\n",
+    "is_palindrome(\"Murder for a jar of red rum \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
