--- a/module-e-week-1-topic-2-recursion.ipynb
+++ b/module-e-week-1-topic-2-recursion.ipynb
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -629,7 +629,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rummurderforajarofredrum\n"
+      "qmurderforajarofredrum1\n"
      ]
     },
     {
@@ -638,7 +638,7 @@
        "False"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,13 +653,14 @@
     "        else:\n",
     "            return get_reverse(phrase[1:])+phrase[0]\n",
     "    x=get_reverse(phrase)\n",
-    "    print(x)\n",
-    "  \n",
+    " \n",
+    "    \n",
     "    if x==phrase.replace(\" \", \"\").lower():\n",
+    "\n",
     "        return True\n",
     "    return False\n",
     "    # Write your solution here\n",
-    "is_palindrome(\"Murder for a jar of red rum \")"
+    "is_palindrome(\"q Murder for a jar of red rum 1\")"
    ]
   },
   {
